test/e2e/fixtures/request-header-suppress-envoy-headers/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request-header-suppress-envoy-headers-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: request-header-suppress-envoy-headers-echo
  template:
    metadata:
      labels:
        app: request-header-suppress-envoy-headers-echo
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: request-header-suppress-envoy-headers-echo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: request-header-suppress-envoy-headers-echo
spec:
  selector:
    app: request-header-suppress-envoy-headers-echo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
# The Module is global to one Emissary instance, hence `slot: exclusive`.
apiVersion: getambassador.io/v3alpha1
kind: Module
metadata:
  name: ambassador
spec:
  ambassador_id: [(env('SLOT'))]
  config:
    suppress_envoy_headers: true
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: target
spec:
  ambassador_id: [(env('SLOT'))]
  hostname: "*"
  prefix: /target/
  rewrite: /rewrite/
  timeout_ms: 5001
  service: request-header-suppress-envoy-headers-echo:8080
